improved readability/added some things.
MyServlet thing still doesnt work HELP

--- a/src/com/java/resources/templates/index.html
+++ b/src/com/java/resources/templates/index.html
@@ -1,3 +1,5 @@
+<%@ page language = "java" contentType="text/html; charset=UTF-8"
+pageEncoding = "UTF-8"%>
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
@@ -5,9 +7,9 @@
     <title>Title</title>
 </head>
 <body>
-<form th:action = "@{/index}" th:object = "${myBean}" method="post">
-
-    <input type="submit" name="button1" value="Button 1" />
+<form th:action = "save">
+    <input type="submit" name="button1" value="Button 1"/>
+</form>
 
     <input type="submit" name="button2" value="Button 2" />
 
@@ -17,6 +19,6 @@
 
     <input type="submit" name="button5" value="Button 5" />
 
-</form>
+
 </body>
 </html>
